k8s/overlays/gke/patches/storageclass-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: voting
spec:
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      storageClassName: premium-rwo
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
