k8s/overlays/gke/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting
spec:
  ingressClassName: gce
